<?xml version="1.0" encoding="UTF-8"?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.eclipse.lsp4jakarta</groupId>
    <artifactId>jdt-parent</artifactId>
    <version>0.2.7-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Eclipse LSP4Jakarta JDT Plugin Parent</name>
    <description>Eclipse LSP4Jakarta JDT Plugin Parent</description>
    <organization>
        <name>Eclipse LSP4Jakarta</name>
        <url>https://github.com/eclipse/lsp4jakarta</url>
    </organization>
    <scm>
        <connection>scm:git:git@github.com:eclipse/lsp4jakarta.git</connection>
        <developerConnection>scm:git:git@github.com:eclipse/lsp4jakarta.git</developerConnection>
        <url>git@github.com:eclipse/lsp4jakarta.git</url>
        <tag>0.2.7-SNAPSHOT</tag>
    </scm>
    <licenses>
        <license>
            <name>EPL-2.0</name>
            <url>https://www.eclipse.org/legal/epl-2.0/</url>
            <comments>Eclipse Public License 2.0</comments>
        </license>
    </licenses>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <tycho.version>4.0.10</tycho.version>
        <tycho.scmUrl>scm:git:https://github.com/eclipse/lsp4jakarta</tycho.scmUrl>
        <tycho.generateSourceReferences>true</tycho.generateSourceReferences> 
        <releases.repo.id>repo.eclipse.org</releases.repo.id>
        <releases.repo.url>https://repo.eclipse.org/content/repositories/lsp4jakarta-releases/</releases.repo.url>
        <snapshots.repo.id>repo.eclipse.org</snapshots.repo.id>
        <snapshots.repo.url>https://repo.eclipse.org/content/repositories/lsp4jakarta-snapshots/</snapshots.repo.url>
    </properties>
    
    <pluginRepositories>
        <pluginRepository>
            <id>cbi-release</id>
            <url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
        </pluginRepository>
    </pluginRepositories>
    <distributionManagement>
        <repository>
            <id>${releases.repo.id}</id>
            <name>Eclipse Releases Repository</name>
            <url>${releases.repo.url}</url>
        </repository>
        <snapshotRepository>
            <id>${snapshots.repo.id}</id>
            <name>Eclipse Snapshots Repository</name>
            <url>${snapshots.repo.url}</url>
        </snapshotRepository>
    </distributionManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.23.0</version>
                <configuration>
                    <configFile>${project.basedir}/../../resources/ide/config/eclipse-formatter-config.xml</configFile>
                    <lineEnding>LF</lineEnding>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<target>
							<artifact>
								<groupId>org.eclipse.lsp4jakarta</groupId>
								<artifactId>org.eclipse.lsp4jakarta.jdt.tp</artifactId>
								<version>${project.version}</version>
							</artifact>
						</target>
						<pomDependencies>consider</pomDependencies>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<format>yyyyMMdd-HHmm</format>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<useUIHarness>false</useUIHarness>
						<argLine>-Xmx512m</argLine>
						<!-- kill test JVM if tests take more than 10 minutes
						(600 seconds) to
                            finish. This depends on speed of VM but current runs are 180s. -->
						<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>platform-mac</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.eclipse.tycho</groupId>
                        <artifactId>tycho-surefire-plugin</artifactId>             
                        <configuration>
                            <useUIHarness>false</useUIHarness>
                            <argLine>-Xmx512m -XstartOnFirstThread</argLine>
                            <!-- kill test JVM if tests take more than 10 minutes (600 seconds) to
                                finish. This depends on speed of VM but current runs are 180s. -->
                            <forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>eclipse-sign</id>
            <build>
                <plugins>
                    
                    <plugin>
                        <groupId>org.eclipse.cbi.maven.plugins</groupId>
                        <artifactId>eclipse-jarsigner-plugin</artifactId>
                        <version>1.3.2</version>
                        <executions>
                            <execution>
                                <id>sign</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <modules>
        <module>org.eclipse.lsp4jakarta.jdt.tp</module>
        <module>org.eclipse.lsp4jakarta.jdt.core</module>
        <module>org.eclipse.lsp4jakarta.jdt.site</module>
        <module>org.eclipse.lsp4jakarta.jdt.test</module>
    </modules>
</project>
